--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body>
 
   <h1>🚧 This Website is Under Construction 🚀</h1>
-  <p>Our sad alien is working hard to finish it… please check back soon!</p>
+  <p>Our Sad Alien is working hard to finish it… please check back soon!</p>
 
   <img src="https://cdn-icons-png.flaticon.com/512/3534/3534010.png" alt="Crane" class="crane" />
   <br />
